--- a/pom.xml
+++ b/pom.xml
@@ -4,20 +4,20 @@
 
   <groupId>com.abiquo</groupId>
   <artifactId>api-java-client</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.0-SNAPSHOT</version>
   <name>Abiquo API Client</name>
 
    <properties>
         <api.version>3.2.0</api.version>
         <jersey.version>1.18</jersey.version>
     </properties>
+    
     <dependencies>
         <dependency>
             <groupId>com.abiquo</groupId>
             <artifactId>api-model-transport</artifactId>
             <version>${api.version}</version>
         </dependency>
-        
         <dependency>
             <groupId>com.xebialabs.overthere</groupId>
             <artifactId>overthere</artifactId>
