--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,62 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<!--
 
-  <groupId>com.abiquo</groupId>
-  <artifactId>api-java-client</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <name>Abiquo API Client</name>
+    Copyright (C) 2008 Abiquo Holdings S.L.
 
-   <properties>
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+        http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+
+-->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.abiquo</groupId>
+    <artifactId>api-java-client</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    
+    <name>Abiquo API Client</name>
+    <description>Abiquo API Java client</description>
+    <url>https://github.com/abiquo/api-java-client</url>
+    <inceptionYear>2008</inceptionYear>
+    <organization>
+        <name>Abiquo Holdings S.L.</name>
+        <url>http://www.abiquo.com</url>
+    </organization>
+    
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    
+    <issueManagement>
+        <system>Jira</system>
+        <url>http://jira.abiquo.com/</url>
+    </issueManagement>
+    
+    <scm>
+        <url>https://github.com/abiquo/api-java-client</url>
+        <connection>https://github.com/abiquo/api-java-client.git</connection>
+        <developerConnection>scm:git:git@github.com:abiquo/api-java-client.git</developerConnection>
+    </scm>
+    
+    <developers>
+        <developer>
+            <name>Abiquo Developers</name>
+            <email>developers@abiquo.com</email>
+        </developer>
+    </developers>
+    
+    <properties>
         <api.version>3.2.0</api.version>
         <jersey.version>1.18</jersey.version>
     </properties>
@@ -19,14 +68,14 @@
             <version>${api.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.xebialabs.overthere</groupId>
-            <artifactId>overthere</artifactId>
-            <version>2.4.3</version>
-        </dependency>
-        <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-client</artifactId>
             <version>${jersey.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>17.0</version>
         </dependency>
     </dependencies>
     <build>
@@ -39,6 +88,31 @@
                     <source>1.7</source>
                     <target>1.7</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.mycila</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <header>header-asl.txt</header>
+                    <properties>
+                        <year>${project.inceptionYear}</year>
+                        <owner>${project.organization.name}</owner>
+                    </properties>
+                    <excludes>
+                        <exclude>**/README</exclude>
+                        <exclude>**/header-asl.txt</exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>add-headers</id>
+                        <goals>
+                            <goal>format</goal>
+                        </goals>
+                        <phase>process-resources</phase>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
