--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,18 @@
             <artifactId>guava</artifactId>
             <version>17.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.8.8</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>mockwebserver</artifactId>
+            <version>2.1.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -102,6 +114,11 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18</version>
+            </plugin>
+            <plugin>
                 <groupId>com.mycila</groupId>
                 <artifactId>license-maven-plugin</artifactId>
                 <version>2.6</version>
@@ -111,10 +128,12 @@
                         <year>${project.inceptionYear}</year>
                         <owner>${project.organization.name}</owner>
                     </properties>
+                    <!-- 
                     <excludes>
                         <exclude>**/README</exclude>
                         <exclude>**/header-asl.txt</exclude>
                     </excludes>
+                    -->
                 </configuration>
                 <executions>
                     <execution>
