--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>com.abiquo</groupId>
             <artifactId>api-model-transport</artifactId>
-            <version>3.1.0</version>
+            <version>3.4.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.squareup.okhttp</groupId>
