--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>guava</artifactId>
         </dependency>
         <dependency>
+            <groupId>oauth.signpost</groupId>
+            <artifactId>signpost-core</artifactId>
+            <version>1.2.1.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <scope>test</scope>
