--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.abiquo</groupId>
     <artifactId>api-java-client-project</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Abiquo API Client :: Project</name>
@@ -48,7 +48,7 @@
         <url>https://github.com/abiquo/api-java-client</url>
         <connection>https://github.com/abiquo/api-java-client.git</connection>
         <developerConnection>scm:git:git@github.com:abiquo/api-java-client.git</developerConnection>
-      <tag>1.0.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <developers>
