--- a/stream/pom.xml
+++ b/stream/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.abiquo</groupId>
         <artifactId>api-java-client-project</artifactId>
-        <version>1.0.0</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     
     <modelVersion>4.0.0</modelVersion>
